Rename to EDI_Format as a general X12 EDI parser.